--- a/introduce.html
+++ b/introduce.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>자기소개 상세</title>
+    <link rel="stylesheet" href="./post-detail.css">
 </head>
 <body>
-    <h1>안녕</h1>
+    <div class="">
+
+    </div>
 </body>
 </html>
