post-detail ing

--- a/introduce.html
+++ b/introduce.html
@@ -7,8 +7,23 @@
     <link rel="stylesheet" href="./post-detail.css">
 </head>
 <body>
-    <div class="">
+    <div class="close-btn-section">
+        <a href="index.html"><button type="button" class="close-btn"></button></a>
+    </div>
+    <div class="slide-section">
+        <button class="next-slide">&gt;</button>
+        <button class="before-slide">&lt;</button> <!-- '<'이 기호 특수문자라서 &lt;로 표시 -->
+    </div>
+    <div class="detail-page">
+        <div class="photo-section">
 
+        </div>
+        <div class="text-section">
+            <div class="top">
+               <!-- <img src="./cat.png" alt="프로필 아이콘" class="profile-icon"/>-->
+            </div>
+
+        </div>
     </div>
 </body>
 </html>
