--- a/hobby.html
+++ b/hobby.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자기소개 상세</title>
+    <title>취미 상세</title>
     <link rel="stylesheet" href="./post-detail.css">
     <link rel="stylesheet" href="./post-detail-plus.css">
 </head>
