--- a/introduce.html
+++ b/introduce.html
@@ -6,6 +6,7 @@
     <title>자기소개 상세</title>
     <link rel="stylesheet" href="./post-detail.css">
     <link rel="stylesheet" href="./post-detail-plus.css">
+    <script src="./detail-page.js" defer></script>
 </head>
 <body>
     <div class="close-btn-section">
@@ -17,7 +18,8 @@
     </div>
     <div class="detail-page">
         <div class="photo-section">
-
+            <img class="post1" src="./img/me2.jpeg">
+            <img class="post2" src="./img/schedule.jpeg">
         </div>
         <div class="text-section">
             <div class="top">
@@ -25,16 +27,35 @@
                 <span>sumi.0w0</span>
                 <img src="./img/three-dot.png" alt="더보기 아이콘" class="three-dot-icon">
             </div>
-            <div class="middle"></div>
+            <div class="middle">
+                    <p class="post1">안녕하세요~! 중어중문학과 19학번 김수미입니다.<br>
+                        복수전공은 국제통상입니다<br>
+                        한 해 동안 열심히 공부해요! 잘부탁드립니다. <br><br>
+
+                        大家好！
+                        我是“金秀美“
+                        认识你们很高兴
+                        请多多关照😀 谢谢<br>
+                        <span>(그냥 중국어 뽐내보고 싶어서 넣어봤습니다 허허)</span>
+                    </p>
+                    <p class="post2">
+                        이번학기 제 시간표입니다. 사실 막학기라 3학점만 들으면 되는데 컴공과 수업 듣고 싶어서 더 신청했어요. <br>
+                        저랑 같은 수업 듣는 분 있으면 아는 척 해주세요!!<br>
+                        김인규 교수님 자료구조 들어보신 분 계신가요? 아주 죽겠어요...<br>
+                        그치만 이겨내고 명예 컴공과로 거듭나볼게요...<br>
+                    </p>
+            </div>
             <div class="bottom">
                 <div class="bottom-icon-section">
-                    <img src="./img/heart-icon.png" alt="하트 아이콘" class="left-area">
+                    <img src="./img/heart-icon.png" alt="하트 아이콘" class="left-area" id="unlike">
+                    <img src="./img/full-heart-icon.png" alt="하트 아이콘" class="left-area" id="like">
                     <img src="./img/comment-icon.png" alt="댓글 아이콘" class="left-area">
                     <img src="./img/dm-icon.png" alt="디엠 아이콘" class="left-area">
                     <img src="./img/save-icon.png" alt="저장 아이콘" class="right-area">
                 </div>
                 <div class="bottom-text-section">
-                    <p><span>likelion_kmu</span>님 <span>외 100명</span>이 좋아합니다</p>
+                    <p class="like-unclick"><span>좋아요</span>를 눌러주세요</p>
+                    <p class="like-click"><span>아기사자</span>님이 이 게시물을 좋아합니다</p>
                     <p>3월 24일</p>
                 </div>
                 <div class="bottom-comment-section">
@@ -44,5 +65,6 @@
             </div>
         </div>
     </div>
+  
 </body>
 </html>
