--- a/introduce.html
+++ b/introduce.html
@@ -18,8 +18,8 @@
     </div>
     <div class="detail-page">
         <div class="photo-section">
-            <img class="post1" src="./img/me2.jpeg">
-            <img class="post2" src="./img/schedule.jpeg">
+            <img class="post1" src="./img/me2.jpeg" alt="내 사진">
+            <img class="post2" src="./img/schedule.jpeg" alt="시간표 사진">
         </div>
         <div class="text-section">
             <div class="top">
@@ -36,7 +36,7 @@
                         我是“金秀美“
                         认识你们很高兴
                         请多多关照😀 谢谢<br>
-                        <span>(그냥 중국어 뽐내보고 싶어서 넣어봤습니다 허허)</span>
+                        <span class="comment">(그냥 중국어 뽐내보고 싶어서 넣어봤습니다 허허)</span>
                     </p>
                     <p class="post2">
                         이번학기 제 시간표입니다. 사실 막학기라 3학점만 들으면 되는데 컴공과 수업 듣고 싶어서 더 신청했어요. <br>
