--- a/hobby.html
+++ b/hobby.html
@@ -34,7 +34,7 @@
                         코로나때 억압받았더니 여행무새가 되었어요<br>
                         국내,해외 가리지 않고 여행이라면 다 좋아합니다<br>
                         최근에는 부산에 다녀왔어요!<br>
-                        중문과인데 중국을 한번도 안가봐서 다음에는 꼭 중국을 가보고 싶어요
+                        중문과인데 중국을 한번도 안가봐서 다음에는 꼭 중국에 가보고 싶어요
                     </p>
                     <p class="post2">
                         <span class="semi-title"># 베이킹</span><br>
@@ -46,7 +46,7 @@
                         <span class="semi-title"># 산책 및 러닝</span><br>
                         여러분 저희 동네가 숨겨진 벚꽃 맛집입니다!!!<br>
                         집 주변에 천이 있어서 자주 산책하러 나갑니다. 가끔 너구리도 있어요<br>
-                        그리고 요즘엔 살기위해 러닝도 한답니다.
+                        그리고 요즘엔 살기위해 러닝을 시작했습니다.
 
                     </p>
             </div>
