--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
                 </div>
                 <div class="write-middle">
                     <p>게시물 <span>3</span></p>
-                    <p>팔로워 <span>630</span></p>
-                    <p>팔로우 <span>240</span></p>
+                    <p>팔로워 <span>1K</span></p>
+                    <p>팔로우 <span>0</span></p>
                 </div>
                 <div class="write-bottom">
-                    <p>저에 대해 알고싶으시면 각 게시물을 클릭해주세요~!</p>
+                    <p>저에 대해 알고싶으시면 각 게시물을 클릭해주세요~! <br>
+                        팔로워는 제 희망사항입니다... <br>
+                        제 실제 인스타가 궁금하시면 <a href="https://www.instagram.com/sumi.0w0/">여기</a>를 클릭해주세요. 
+
+                    </p>
 
                 </div>
             </div>
