--- a/hobby.html
+++ b/hobby.html
@@ -33,21 +33,23 @@
                         <span class="semi-title"># 여행</span><br>
                         코로나때 억압받았더니 여행무새가 되었어요<br>
                         국내,해외 가리지 않고 여행이라면 다 좋아합니다<br>
-                        최근에는 부산에 다녀왔어요!<br>
-                        중문과인데 중국을 한번도 안가봐서 다음에는 꼭 중국에 가보고 싶어요
+                        제일 좋았던 곳은 코타키나발루였던거같아요! 선셋이 진짜 예뻐요 가신다면 선셋 꼭 보고 오세요<br>
+                        그리고 최근에는 부산에 다녀왔어요!<br>
+                        중문과인데 중국어 쓰는 나라를 한번도 안가봐서 다음에는 꼭 대만이나 상해에 가보고 싶어요
                     </p>
                     <p class="post2">
                         <span class="semi-title"># 베이킹</span><br>
                         빵순이인데 요즘 빵 물가가 너무 비싸서 집에서 만들기 시작했습니다<br>
+                        만들면서 빵이 왜 비싼지 알게 되었습니다..<br>
                         바스크 치즈케이크, 마들렌을 제일 많이 만들어 먹는 것 같아요! <br>
                         기회가 된다면 만들어 가겠습니다! 
                     </p>
                     <p class="post3">
                         <span class="semi-title"># 산책 및 러닝</span><br>
-                        여러분 저희 동네가 숨겨진 벚꽃 맛집입니다!!!<br>
-                        집 주변에 천이 있어서 자주 산책하러 나갑니다. 가끔 너구리도 있어요<br>
-                        그리고 요즘엔 살기위해 러닝을 시작했습니다.
-
+                        여러분 저희 동네가 숨겨진 벚꽃 맛집입니다!!! 작년에 제가 산책하면서 찍은 사진이에요<br>
+                        집 주변에 천이 있어서 자주 산책하러 나갑니다. 저녁에 나가면 가끔 너구리도 있어요<br>
+                        그리고 요즘엔 살기위해 러닝을 시작했습니다. 러닝하려고 애플워치도 샀어요!! <br>
+                        러닝머신도 좋지만 날씨 좋은 날에는 밖에서 뛰는게 더 기분이 좋더라구요<br>
                     </p>
             </div>
             <div class="bottom">
