--- a/balance-game.html
+++ b/balance-game.html
@@ -20,8 +20,8 @@
         <div class="post1">
             <span class="explain-text">
                 제 취향을 맞혀보세요~! <br>
-                두 사진 중 제 취향이라고 생각하는 곳에 마우스를 올려보세요.<br> 
-                맞으면 파란색 배경이 틀리면 빨간색 배경이 나옵니다!<br>
+                두 사진 중 제 취향이라고 생각하는 것을 클릭해보세요.<br> 
+                맞으면 초록색 배경이 틀리면 빨간색 배경이 나옵니다!<br>
                 슬라이드를 다음으로 넘겨 게임을 시작해주세요!!!
             </span>
                 
@@ -39,12 +39,12 @@
         <div class="post4">
             <div class="incorrect"><img src="./img/Hawaiian Pizza.jpeg" alt="피자 이미지"></div>
             <div class="correct"><img src="./img/pizza.jpeg" alt="피자 이미지"></div>
-            <span class="text" style="color: white;">파인애플피자 호 VS 파인애플피자 불호 </span>
+            <span class="text" style="color: white;">파인애플피자 호 VS <br>파인애플피자 불호 </span>
         </div> 
         <div class="post5">
             <div class="incorrect"><img src="./img/boy1.jpeg" alt="유병재 이미지"></div>
             <div class="correct"><img src="./img/boy2.jpeg" alt="차은우 이미지"></div>
-            <span class="text" style="color: white;">100억부자 유병재 VS 무일푼 차은우 </span>
+            <span class="text" style="color: white;">100억부자 유병재 <br>VS 무일푼 차은우 </span>
         </div> 
     </div>
 </body>
