--- a/introduce.html
+++ b/introduce.html
@@ -30,6 +30,9 @@
             <div class="middle">
                     <p class="post1">안녕하세요~! 중어중문학과 19학번 김수미입니다.<br>
                         복수전공은 국제통상입니다<br>
+                        MBTI는 사회화 잘 된 ISTP입니다.<br>
+                        자기소개 페이지 3일동안 만들었어요. 이것저것 많으니까 꼭 다 둘러봐주세요!<br>
+                        좋아요도 눌린답니다 ♡<br>
                         한 해 동안 열심히 공부해요! 잘부탁드립니다. <br><br>
 
                         大家好！
